--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ http {
 
     server {
         listen 80;
-        server_name noxonfx.net  www.noxonfx.net;
+        server_name 207.154.232.125 noxonfx.net  www.noxonfx.net;
 
         location / {
             proxy_pass http://django:8000;
