--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
   django:
     build: .
     ports:
-      - "8000:8000"
+      - EXPOSE 8000
 
   nginx:
     image: nginx:latest
     container_name: nginx
     restart: always
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
