--- a/nginx.conf
+++ b/nginx.conf
@@ -16,8 +16,8 @@ http {
     client_max_body_size 3000m;
 
     server {
-        listen 80;
-        server_name 207.154.232.125 noxonfx.net  www.noxonfx.net;
+        listen 8000;
+        server_name 207.154.232.125;
 
         location / {
             proxy_pass http://django:8000;
