--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     container_name: nginx
     restart: always
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
@@ -24,3 +24,5 @@ services:
     build:
       context: "."
       dockerfile: Dockerfile
+    ports:
+      - "8080:80"
